# data-inclusion-schema

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  jsfh-conf-2.yaml  jsfh-conf-3.yaml  jsfh-conf.yaml  mkdocs.yml  model.md.j2  models.py  pyproject.toml  requirements.txt  schema.yml  schemas.yml  services.json  setup.py  sitemap.xml  structures.json  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: docs.yml  publish.yml  pypi.yml  static.yml
dev/: 404.html  index.html  sitemap.xml
dev/changelog/: index.html
dev/search/: search_index.json
dev/service/: index.html
dev/structure/: index.html
dev/summary/: index.html
docs/: index.md  jinja_test.md  model.md.j2  service.md  service2.md  service3.md  structure.md  summary.md  test.html  test.md
docs/referentiels/: frais.md  labels_nationaux.md  mobilisable_par.md  modes_accueil.md  modes_mobilisation.md  modes_orientation_accompagnateur.md  modes_orientation_beneficiaire.md  personnes_mobilisatrices.md  profils.md  publics.md  reseaux_porteurs.md  thematiques.md  types_de_services.md  typologies_de_services.md  typologies_de_structures.md  zones_de_diffusion_types.md
docs/templates/: model.md.j2  summary.md.j2
examples/valid/: 001.json  002.json  003.json
formulaire/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
formulaire/src/: App.tsx  main.tsx
latest/: 404.html  index.html  sitemap.xml
latest/search/: search_index.json
latest/service/: index.html
latest/structure/: index.html
main/: 404.html  index.html  referentiel.md.j2  sitemap.xml
main/search/: search_index.json
main/service/: index.html
main/structure/: index.html
mike/: 404.html  index.html  sitemap.xml
mike/service/: index.html
mike/structure/: index.html
referentiels/frais/: index.html
referentiels/labels_nationaux/: index.html
referentiels/modes_accueil/: index.html
referentiels/modes_orientation_accompagnateur/: index.html
referentiels/modes_orientation_beneficiaire/: index.html
referentiels/profils/: index.html
referentiels/thematiques/: index.html
referentiels/typologies_de_services/: index.html
referentiels/typologies_de_structures/: index.html
referentiels/zones_de_diffusion_types/: index.html
saisie/: Procfile  app.py  requirements.txt
schemas/: service.json  services.json  structure.json  structures.json  test.json
schemas/extra/: frais.json  labels-nationaux.json  mobilisable-par.json  modes-accueil.json  modes-orientation-accompagnateur.json  modes-orientation-beneficiaire.json  profils.json  (+4 more)
scripts/: compile_docs.py  compile_schema.py
search/: search_index.json
service/: index.html
structure/: index.html
v0.24.0/: 404.html  index.html  sitemap.xml
v0.25.0/: 404.html  index.html  sitemap.xml
v0.26.0/: 404.html  index.html  sitemap.xml
v0.27.0/: 404.html  index.html  sitemap.xml
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.0a1/: 404.html  index.html  sitemap.xml
v1.0.0a2/: 404.html  index.html  sitemap.xml
v1.0.0a4/: 404.html  index.html  sitemap.xml
v1.0.0a5/: 404.html  index.html  sitemap.xml
v1.0.0a6/: 404.html  index.html  sitemap.xml
v1.0.0b1/: 404.html  index.html  sitemap.xml
v1.0.0b2/: 404.html  index.html  sitemap.xml
v1.0.0b3/: 404.html  index.html  sitemap.xml
v1.0.0b5/: 404.html  index.html  sitemap.xml
v1.0.0b6/: 404.html  index.html  sitemap.xml
v1.0.0b7/: 404.html  index.html  sitemap.xml
v1.0.0b8/: 404.html  index.html  sitemap.xml
v1.0.1/: 404.html  index.html  sitemap.xml
v1.0.2/: 404.html  index.html  sitemap.xml
v1.0.3/: 404.html  index.html  sitemap.xml
v1.0.4/: 404.html  index.html  sitemap.xml
v1.0.5/: 404.html  index.html  sitemap.xml
v1.0.6/: 404.html  index.html  sitemap.xml
v1.0.7/: 404.html  index.html  sitemap.xml
v1.0.8/: 404.html  index.html  sitemap.xml
vperron-chore-doc/: 404.html  index.html  sitemap.xml
(+481 files in other folders)
