[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data-inclusion-schema"
version = "0.19.0"
description = "Schéma de l'offre d'insertion"
authors = [{ name = "data⋅inclusion", email = "data-inclusion@inclusion.gouv.fr" }]
readme = "README.md"
dynamic = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic[email]>=2.1.1,<3.0.0",
    "pendulum~=3.0",
]


[project.urls]
Home = "https://data.inclusion.gouv.fr"
Documentation = "https://data.inclusion.gouv.fr/schemas-de-donnees-de-loffre/schema-des-structures-et-services-dinsertion"
Source = "https://github.com/gip-inclusion/data-inclusion-schema"

[project.optional-dependencies]
dev = [
    "pre-commit~=2.20",
    "ruff~=0.2",
]
test = [
    "pytest~=8.3",
    "freezegun~=1.5",
]

[project.scripts]
data-inclusion-schema = "data_inclusion.schema.__main__:main"

[tool.ruff.lint]
# see prefixes in https://docs.astral.sh/ruff/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "S",  # bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101",  # assert
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["data_inclusion"]

[tool.flit.module]
name = "data_inclusion.schema"
