[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
requires-python = ">=3.10"
name = "data-inclusion-schema"
version = "0.21.0"
description = "Schéma de l'offre d'insertion"
authors = [{ name = "data⋅inclusion", email = "data-inclusion@inclusion.gouv.fr" }]
readme = "README.md"
dynamic = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic[email]>=2.1.1,<3.0.0",
    "pendulum~=3.0",
]

[project.urls]
Home = "https://data.inclusion.gouv.fr"
Source = "https://github.com/gip-inclusion/data-inclusion-schema"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]
test = [
    "pytest",
    "freezegun",
]
docs = [
    "jinja2",
    "mkdocs",
    "mkdocs-material",
]

[tool.ruff.lint]
# see prefixes in https://docs.astral.sh/ruff/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "S",  # bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101",  # assert
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["data_inclusion"]

[tool.flit.module]
# this is the import name
name = "data_inclusion.schema"
